--- a/produtos/templates/produtos/index.html
+++ b/produtos/templates/produtos/index.html
@@ -1,6 +1,8 @@
-<!DOCTYPE html>
-<html>
-    <body>
-        <h1>Voce esta em produtos</h1>
-    </body>
-</html>
+{% extends 'base.html' %}
+
+{% block 'titulo' %}Novo titulo do produto{% endblock %}
+
+{% block 'conteudo' %}
+<h1> Novo conteudo do Produto</h1>
+<h2>Venha conferir</h2>
+{% endblock %}
