--- a/contato/template/contato/contato.html
+++ b/contato/template/contato/contato.html
@@ -1,4 +1,5 @@
+<!DOCTYPE html>
 <div>
-    <label> for = 'nome'>Nome:</label>
-    <input type = 'text' id = 'nome'
+    <label>for='nome'>Nome:</label>
+    <input type='text'id='nome'>
 </div>
